added a list to puss code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,45 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Git ub project</title>
+        <link rel="stylesheet" href="style.css">
+        <style>
+            #backround {
+                background-color: olivedrab;
+                padding: 20px;
+                margin-bottom: 10px;
+
+            }
+            h2,p {
+                color: white;
+                margin-bottom: 10px;
+            }
+            .lorem {
+                color: brown;
+                background-color: aliceblue;
+            }
+
+
+
+        </style>
     </head>
     <body>
-        
+        <div id="backround">
+            <h2 >Git First Genaration</h2>
+            <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus qui quas dicta? Suscipit cum praesentium eligendi vel. Officiis, praesentium totam quod possimus hic, commodi nesciunt culpa explicabo inventore eveniet amet!</p>
+            <p class="lorem" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus qui quas dicta? Suscipit cum praesentium eligendi vel. Officiis, praesentium totam quod possimus hic, commodi nesciunt culpa explicabo inventore eveniet amet!</p>
+            <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus qui quas dicta? Suscipit cum praesentium eligendi vel. Officiis, praesentium totam quod possimus hic, commodi nesciunt culpa explicabo inventore eveniet amet!</p>
+        </div>
+        <div id="backround">
+            <h2 >Git First Genaration</h2>
+            <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus qui quas dicta? Suscipit cum praesentium eligendi vel. Officiis, praesentium totam quod possimus hic, commodi nesciunt culpa explicabo inventore eveniet amet!</p>
+            <p class="lorem" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus qui quas dicta? Suscipit cum praesentium eligendi vel. Officiis, praesentium totam quod possimus hic, commodi nesciunt culpa explicabo inventore eveniet amet!</p>
+            <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus qui quas dicta? Suscipit cum praesentium eligendi vel. Officiis, praesentium totam quod possimus hic, commodi nesciunt culpa explicabo inventore eveniet amet!</p>
+        </div>
+        <div id="backround">
+            <h2 >Git First Genaration</h2>
+            <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus qui quas dicta? Suscipit cum praesentium eligendi vel. Officiis, praesentium totam quod possimus hic, commodi nesciunt culpa explicabo inventore eveniet amet!</p>
+            <p class="lorem" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus qui quas dicta? Suscipit cum praesentium eligendi vel. Officiis, praesentium totam quod possimus hic, commodi nesciunt culpa explicabo inventore eveniet amet!</p>
+            <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus qui quas dicta? Suscipit cum praesentium eligendi vel. Officiis, praesentium totam quod possimus hic, commodi nesciunt culpa explicabo inventore eveniet amet!</p>
+        </div>
     </body>
 </html>
